# software_turni_acustica

./: .gitignore  LICENSE  README.md  changes_v15.diff  install.sh  pyproject.toml  requirements.txt  turni_v15.py  turni_v16.py  uninstall.sh
.github/workflows/: test.yml
packaging/: PKGBUILD  turni-acustica.desktop  turni-acustica.sh
tests/: test_helpers.py  test_new_features.py
turni/: __init__.py  calendar_utils.py  config.py  constants.py  docx_export.py  helpers.py  history.py  ics_export.py  io_utils.py  solver.py  validators.py
turni/ui/: app.py  widgets.py
